make colonial railroading a startup option

--- a/HFM/localisation/00_HPM_decisions.csv
+++ b/HFM/localisation/00_HPM_decisions.csv
@@ -125,6 +125,8 @@ enable_options_title;Show 'Options' Decisions;;;;;;;;;;;;x,,,,,,,,,,,,,,,,,,,,,,
 enable_options_desc;This decision shows all optional decisions to tweak and change the game's behavior from vanilla HFM. This, along with all decisions it enables, will disappear January 1st 1837 to reduce clutter, so you have a year in-game to pick and choose what you want. Once a tweak is chosen, you can't disable it anymore, so if you misclick you need to edit your save or start a new game.;;;;;;;;;;;;x,,,,,,,,,,,,,,,,,,,,,,
 disable_options_title;Hide 'Options' Decisions;;;;;;;;;;;;x,,,,,,,,,,,,,,,,,,,,,,
 disable_options_desc;This will hide all optional tweaks to vanilla HFM. You still have until 1837 to change your mind though.;;;;;;;;;;;;x,,,,,,,,,,,,,,,,,,,,,,
+option_disable_colonial_railroading_title;Option: Disable Colonial Railroading;;;;;;;;;;;;x,,,,,,,,,,,,,,,,,,,,,,
+option_disable_colonial_railroading_desc;This tweak will disable the colonial railroading events in Africa.;;;;;;;;;;;;x,,,,,,,,,,,,,,,,,,,,,,
 option_disable_anarcho_liberals_title;Option: Disable Anarcho-Liberal Ideology;;;;;;;;;;;;x,,,,,,,,,,,,,,,,,,,,,,
 option_disable_anarcho_liberals_desc;This tweak will stop anarcho-liberal ideology from spawning. It may help performance a bit. Some people think they are too unrealistic for them, so they might want to disable it. I didn't test any balance issues that might arise without them in the game though.;;;;;;;;;;;;x,,,,,,,,,,,,,,,,,,,,,,
 option_disable_starting_party_loyalty_title;Option: Remove Starting Party Loyalty;;;;;;;;;;;;x,,,,,,,,,,,,,,,,,,,,,,
